Fixed desktop jumbotron horizontal overflow

--- a/css/index.css
+++ b/css/index.css
@@ -190,6 +190,8 @@ h1 {
 }
 .jumbotron {
   display: flex;
+  position: relative;
+  overflow: hidden;
 }
 .jumbotron .desktop {
   position: absolute;
