--- a/less/global.less
+++ b/less/global.less
@@ -51,6 +51,8 @@ p {
 
 .jumbotron {
   display: flex;
+  position: relative;
+  overflow: hidden;
 
   .desktop {
     position: absolute;
